--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
             <button class="upload-modal" onclick="onUpload('upload')">Upload</button>
             <button class="download-modal"><a href="#" onclick="onDownload(this)" download="MyMeme.jpg">Download
                 </a></button>
-            <button class="save-modal" onclick="onSaveMeme()">Save Template</button>
+            <button class="save-modal" onclick="onSaveMeme(this)">Save Template</button>
             <button class="close-modal" onclick="closeModal()">x</button>
         </aside>
     </main>
